stay current loc

--- a/learn-certs-pr/azure-ai-engineer/renew/index.yml
+++ b/learn-certs-pr/azure-ai-engineer/renew/index.yml
@@ -18,7 +18,7 @@ skills:
 - Создавайте разговорные AI-решения
 - Реализуйте интеллектуальный анализ знаний с помощью Когнитивного поиска Azure
 examsPassed:
-- ai-100, ai-102
+- ai-100 ИЛИ ai-102
 studyGuideDescription: 'Используйте этот набор учебных модулей, которые помогут вам подготовиться к сертификации Microsoft: Экзамен на продление срока действия Azure AI Engineer Associate.'
 resources:
 - title: О продлении сертификации
