--- a/learn-certs-pr/azure-data-engineer/renew/index.yml
+++ b/learn-certs-pr/azure-data-engineer/renew/index.yml
@@ -14,7 +14,7 @@ skills:
 - Прием петабайтов с помощью фабрики данных Azure
 - Выполняйте масштабное преобразование без необходимости программировать с помощью фабрики данных Azure
 examsPassed:
-- dp-200, dp-201, dp-203
+- dp-200, dp-201 ИЛИ dp-203
 studyGuideDescription: 'Используйте этот набор учебных модулей, которые помогут вам подготовиться к сертификации Microsoft: Экзамен на продление срока подписки Azure Data Engineer Associate.'
 resources:
 - title: О продлении сертификации
