--- a/learn-certs-pr/azure-developer/renew/index.yml
+++ b/learn-certs-pr/azure-developer/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:Certification
+### YamlMime:CertificationRenewal
 title: 'Обновление для Microsoft Certified: Azure Developer Associate'
 metadata:
   title: 'Обновление для Microsoft Certified: Azure Developer Associate'
