--- a/learn-certs-pr/devops-engineer/renew/index.yml
+++ b/learn-certs-pr/devops-engineer/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:Certification
+### YamlMime:CertificationRenewal
 title: 'Обновление для Microsoft Certified: DevOps Engineer Expert'
 metadata:
   title: 'Обновление для Microsoft Certified: DevOps Engineer Expert'
