--- a/learn-certs-pr/azure-data-engineer/renew/index.yml
+++ b/learn-certs-pr/azure-data-engineer/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:CertificationRenewal
+### YamlMime:CertificationRenewalRenewal
 title: 'Обновление для Microsoft Certified: Azure Data Engineer Associate'
 metadata:
   title: 'Обновление для Microsoft Certified: Azure Data Engineer Associate'
