--- a/learn-certs-pr/azure-solutions-architect/renew/index.yml
+++ b/learn-certs-pr/azure-solutions-architect/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:Certification
+### YamlMime:CertificationRenewal
 title: 'Обновление для Microsoft Certified: Azure Solutions Architect Expert'
 metadata:
   title: 'Обновление для Microsoft Certified: Azure Solutions Architect Expert'
