--- a/learn-certs-pr/d365-functional-consultant-financials/renew/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-financials/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:Certification
+### YamlMime:CertificationRenewal
 title: 'Обновление для Microsoft Certified: Dynamics 365 Finance Functional Consultant Associate'
 metadata:
   title: 'Обновление для Microsoft Certified: Dynamics 365 Finance Functional Consultant Associate'
