--- a/learn-certs-pr/d365-functional-consultant-marketing/renew/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:CertificationRenewal
+### YamlMime:CertificationRenewalRenewal
 title: 'Обновление для Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate'
 metadata:
   title: 'Обновление для Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate'
