--- a/learn-certs-pr/m365-security-administrator/renew/index.yml
+++ b/learn-certs-pr/m365-security-administrator/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:Certification
+### YamlMime:CertificationRenewal
 title: 'Обновление для Microsoft 365 Certified: Security Administrator Associate'
 metadata:
   title: 'Обновление для Microsoft 365 Certified: Security Administrator Associate'
