--- a/learn-certs-pr/modern-desktop/renew/index.yml
+++ b/learn-certs-pr/modern-desktop/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:Certification
+### YamlMime:CertificationRenewal
 title: 'Обновление для Microsoft 365 Certified: Modern Desktop Administrator Associate'
 metadata:
   title: 'Обновление для Microsoft 365 Certified: Modern Desktop Administrator Associate'
