--- a/learn-certs-pr/d365-functional-consultant-manufacturing/renew/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-manufacturing/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:CertificationRenewalRenewal
+### YamlMime:CertificationRenewal
 title: 'Обновление для Microsoft Certified: Dynamics 365 Supply Chain Management, Manufacturing Functional Consultant Associate'
 metadata:
   title: 'Обновление для Microsoft Certified: Dynamics 365 Supply Chain Management, Manufacturing Functional Consultant Associate'
