--- a/learn-certs-pr/d365-fundamentals-finance-and-operations-apps-erp/index.yml
+++ b/learn-certs-pr/d365-fundamentals-finance-and-operations-apps-erp/index.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Dynamics 365 Fundamentals Finance and Operations Apps (ERP)'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Fundamentals Finance and Operations Apps (ERP)'
-  description: 'Эта сертификация будет доступна в феврале 2021 года. Если вы обладаете глубоким знанием возможностей Dynamics 365 для планирования ресурсов предприятия (ERP) и понимаете основы того, как приложения для финансов и операций вписываются в общую экосистему Microsoft, эта сертификация для вас.'
+  description: 'Если вы обладаете глубоким знанием возможностей Dynamics 365 для планирования ресурсов предприятия (ERP) и понимаете основы того, как приложения для финансов и операций вписываются в общую экосистему Microsoft, эта сертификация для вас.'
 uid: certification.d365-fundamentals-finance-and-operations-apps-erp
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
 summary: |-
@@ -17,8 +17,7 @@ summary: |-
   - разработчики, которые хотят показать более глубокое понимание бизнес-операций, финансов и ERP;
   - студенты, недавние выпускники вузов и меняющие карьеру люди, которые хотят использовать приложения Dynamics 365 для финансов и операций с целью выхода на новый уровень.
   
-  <div><br/><strong>Note&#58; This certification will be available in February 2021.</strong></div>
-subTitle: 'Эта сертификация будет доступна в феврале 2021 года. Если вы обладаете глубоким знанием возможностей Dynamics 365 для планирования ресурсов предприятия (ERP) и понимаете основы того, как приложения для финансов и операций вписываются в общую экосистему Microsoft, эта сертификация для вас.'
+subTitle: 'Если вы обладаете глубоким знанием возможностей Dynamics 365 для планирования ресурсов предприятия (ERP) и понимаете основы того, как приложения для финансов и операций вписываются в общую экосистему Microsoft, эта сертификация для вас.'
 levels:
 - beginner
 skills:
@@ -27,7 +26,6 @@ skills:
 - Описание Dynamics 365 Commerce.
 - Описание Dynamics 365 Human Resources.
 - Описание Project Operations.
-- Описание Dynamics 365 Business Central.
 - Описание общих функций.
 roles:
 - business-owner
@@ -38,6 +36,12 @@ type: fundamentals
 products: 
 - dynamics-365
 - dynamics-finance-operations
+paths:
+- uid: learn.wwl.explore-microsoft-dynamics-365-supply-chain-management
+- uid: learn.wwl.explore-microsoft-dynamics-365-finance
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-commerce
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-human-resources
+- uid: learn.wwl.explore-microsoft-dynamics-365-project-operations-erp
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JKOU
 exams:
 - uid: exam.mb-920
@@ -45,9 +49,15 @@ resources:
 - title: Плакат с сертификацией
   description: Посмотрите обзор, включая сертификаты по основам, ролям и специальностям для Dynamics 365 и Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
+- title: Путешествие к сертификации
+  description: Изучите шаги для получения сертификата и имеющиеся ресурсы, которые помогут вам подготовиться.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAWQX
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+- title: Обучение для получения сертификата
+  description: Рекомендуемые учебные ресурсы, которые помогут вам подготовиться к обязательным экзаменам и получить сертификат.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAFfQ
 - title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: ../deals.md
