--- a/learn-certs-pr/exams/ai-102.yml
+++ b/learn-certs-pr/exams/ai-102.yml
@@ -10,10 +10,11 @@ summary: |-
   
   Кандидаты на этот экзамен должны знать C#, Python или JavaScript и мочь использовать API и SDK на основе REST для создания решений компьютерного зрения, решений для обработки естественного языка, интеллектуального анализа данных и решений с использованием разговорного AI на Azure. Кандидаты на этот экзамен также должны понимать компоненты, которые составляют портфель Azure AI, и доступные варианты хранения данных. В дополнение к этому кандидаты должны понимать и мочь применять принципы ответственного подхода к использованию AI.
   
-  <div><br/><font color='red'><strong>Примечание&#58; этот экзамен станет доступен 23 февраля 2021 года.</strong></font></div>
-subTitle: 'Этот экзамен станет доступен 23 февраля 2021 года. Этот экзамен измеряет вашу способность выполнять следующие технические задачи: планировать решение Azure Cognitive Services и управлять им; реализовывать решения компьютерного зрения; реализовывать решения для обработки естественного языка; реализовывать решения для интеллектуального анализа данных и реализовывать решения с использованием разговорного AI.'
+  <div><br/><font color='red'><strong>Баллы за бета-экзамены не выставляются сразу, потому что мы собираем данные о качестве вопросов и экзамена. <a href="/learn/certifications/certification-exams#participating-in-beta-exams">Узнайте больше о ценности и важности бета-версий экзаменов</a>.</strong></font></div>
+subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: планировать решения Azure Cognitive Services и управлять ими; реализовывать решения компьютерного зрения; реализовывать решения для обработки естественного языка; реализовывать решения для интеллектуального анализа данных и реализовывать решения с использованием разговорного AI.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4MbYD
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AI-102&examname=Exam%20AI-102:%20Designing%20and%20Implementing%20a%20Microsoft%20Azure%20AI%20Solution&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fai-102
 locales:
 - en
 levels:
@@ -45,10 +46,22 @@ products:
 - azure-translator-speech
 - azure-translator-text
 - azure-video-indexer
+courses:
+- uid: course.ai-102t00
+paths:
+- uid: learn.data-ai.evaluate-text-with-language-services
+- uid: learn.wwl.process-translate-speech-azure-cognitive-speech-services
+- uid: learn.wwl.process-classify-images-with-azure-cognitive-vision-services
+- uid: learn.wwl.process-natural-language-azure-cognitive-language-services
+- uid: learn.wwl.implement-knowledge-mining-azure-cognitive-search
+- uid: learn.wwl.create-conversational-ai-solutions
 relatedCertifications:
 - related:
     uid: certification.azure-ai-engineer
 resources:
+- title: Путешествие к сертификации
+  description: Изучите шаги для получения сертификата Azure AI Engineer Associate и имеющиеся ресурсы, которые помогут вам подготовиться.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWy1S2
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
