--- a/learn-certs-pr/exams/az-200.yml
+++ b/learn-certs-pr/exams/az-200.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Examination
-title: Microsoft Azure Developer Core Solutions (beta)
+title: Microsoft Azure Developer Core Solutions 
 metadata:
-  title: 'Экзамен AZ-200: Microsoft Azure Developer Core Solutions (beta)'
-  description: 'Экзамен AZ-200: Microsoft Azure Developer Core Solutions (beta)'
+  title: 'Экзамен AZ-200: Microsoft Azure Developer Core Solutions'
+  description: 'Экзамен AZ-200: Microsoft Azure Developer Core Solutions'
 uid: exam.az-200
 displayName: AZ-200
 summary: "<div><strong>ЭТОТ ЭКЗАМЕН БЫЛ ОТМЕНЕН 03 январь 2019 ГОДА. Примечание&#58; Экзамен будет отменен в 23:59 по центральному стандартному времени</strong></div>\n<br/>   \nКандидатами на этот экзамен являются разработчики Azure, которые разрабатывают и внедряют облачные решения, такие как приложения и сервисы. Они участвуют на всех этапах разработки, от проектирования решений до разработки и развертывания, до тестирования и обслуживания. Они взаимодействуют с архитекторами облачных решений, облачными администраторами баз данных, облачными администраторами и клиентами для реализации решения.\n\nКандидаты должны обладать навыками разработки приложений и сервисов с использованием инструментов и технологий Azure, включая хранение, безопасность, вычисление и связь.\n\nКандидаты должны иметь по крайней мере один год опыта разработки масштабируемых решений на всех этапах разработки программного обеспечения и быть опытными по крайней мере в одном поддерживаемом облаком языке программирования."
