--- a/learn-certs-pr/exams/az-600.yml
+++ b/learn-certs-pr/exams/az-600.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Examination
-title: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub (beta)
+title: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub
 metadata:
-  title: 'Exam AZ-600: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub (beta)'
-  description: 'Exam AZ-600: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub (beta)'
+  title: 'Exam AZ-600: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub'
+  description: 'Exam AZ-600: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub'
 uid: exam.az-600
 displayName: AZ-600
 summary: |-
@@ -10,13 +10,12 @@ summary: |-
   
   Кандидаты на этот экзамен должны обладать значительным опытом управления и эксплуатации сред Azure Stack Hub. Кандидаты на этот экзамен также должны обладать углубленными знаниями Azure и некоторыми знаниями виртуализации, работы с сетями и управления удостоверениями. Кандидатам на этот экзамен необходимо понимать, каким образом Azure Stack Hub позволяет включать процессы DevOps, и разбираться в модели гибридной разработки.
   
-  <div><strong><br/>Баллы за бета-экзамены не выставляются сразу, потому что мы собираем данные о качестве вопросов и экзаменов. Узнайте больше <a href="/learn/certifications/certification-exams#participating-in-beta-exams">о ценности и важности бета-версий экзаменов</a>.</strong></div>
 subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: предоставлять службы, реализовывать интеграцию центра обработки данных, управлять удостоверениями и доступом, управлять инфраструктурой.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Lwq9
 providers:
   - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-600&examname=Exam%20AZ-600:%20Configuring%20and%20Operating%20a%20Hybrid%20Cloud%20with%20Microsoft%20Azure%20Stack%20Hub%20(beta)&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-600
+    examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-600&examname=Exam%20AZ-600:%20Configuring%20and%20Operating%20a%20Hybrid%20Cloud%20with%20Microsoft%20Azure%20Stack%20Hub&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-600
 locales:
 - en
 levels:
@@ -37,6 +36,8 @@ products:
 - azure-app-service
 - azure-event-hubs
 - azure-active-directory
+courses:
+- uid: course.az-600t00
 relatedCertifications:
 - related:
     uid: certification.azure-stack-hub-operator
