--- a/learn-certs-pr/exams/dp-203.yml
+++ b/learn-certs-pr/exams/dp-203.yml
@@ -10,10 +10,11 @@ summary: |-
   
   Кандидаты на экзамен DP-203&#58; Data Engineering on Microsoft Azure должны хорошо знать языки обработки данных, такие как SQL, Python или Scala, и понимать параллельную обработку и шаблоны архитектуры данных.
   
-  <div><br/><font color='red'><strong>Примечание&#58; этот экзамен станет доступен 23 февраля 2021 года.</strong></font></div>
-subTitle: 'Этот экзамен станет доступен 23 февраля 2021 года. Этот экзамен измеряет вашу способность выполнять следующие технические задачи: проектировать и реализовывать хранение данных; проектировать и разрабатывать обработку данных; проектировать и реализовывать безопасность данных; отслеживать и оптимизировать хранение и обработку данных.'
+  <div><br/><font color='red'><strong>Баллы за бета-экзамены не выставляются сразу, потому что мы собираем данные о качестве вопросов и экзамена. <a href="/learn/certifications/certification-exams#participating-in-beta-exams">Узнайте больше о ценности и важности бета-версий экзаменов</a>.</strong></font></div>
+subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: проектировать и реализовывать хранение данных; проектировать и разрабатывать обработку данных; проектировать и реализовывать безопасность данных; отслеживать и оптимизировать хранение и обработку данных.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4MbYT
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=DP-203&examname=Exam%20DP-203:%20Data%20Engineering%20on%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-203
 locales:
 - en
 levels:
@@ -32,10 +33,24 @@ products:
 - azure-event-hubs
 - azure-data-lake
 - azure-databricks
+paths:
+- uid: learn.data-ai.azure-for-the-data-engineer
+- uid: learn.store-data-in-azure
+- uid: learn.wwl.data-integration-scale-azure-data-factory
+- uid: learn.wwl.realize-integrated-analytical-solutions-with-azure-synapse-analytics
+- uid: learn.wwl.work-with-data-warehouses-using-azure-synapse-analytics
+- uid: learn.wwl.perform-data-engineering-with-azure-synapse-apache-spark-pools
+- uid: learn.wwl.work-with-hybrid-transactional-analytical-processing-solutions
+- uid: learn.wwl.data-engineer-azure-databricks
+- uid: learn.data-ai.data-processing-with-azure-adls
+- uid: learn.data-ai.implement-data-streaming-with-asa
 relatedCertifications:
 - related:
     uid: certification.azure-data-engineer
 resources:
+- title: Путешествие к сертификации
+  description: Изучите шаги для получения сертификата Azure Data Engineer Associate и имеющиеся ресурсы, которые помогут вам подготовиться.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWxODZ
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
