--- a/learn-certs-pr/exams/mb-910.yml
+++ b/learn-certs-pr/exams/mb-910.yml
@@ -10,10 +10,11 @@ summary: |-
   
   Кандидаты на этот экзамен должны обладать общими знаниями о среде информационных технологий (IT) или соответствующим опытом работы в такой среде. Кандидаты на этот экзамен также должны обладать фундаментальным пониманием бизнес-операций и принципов взаимодействия с клиентами.
   
-  <div><br/><strong>Примечание&#58; этот экзамен будет доступен в феврале 2021 года.</strong></div>
-subTitle: 'TЭтот экзамен будет доступен в феврале 2021 года. Этот экзамен измеряет вашу способность описывать следующее: Dynamics 365 Marketing; Dynamics 365 Sales; Dynamics 365 Customer Service; Dynamics 365 Field Service; операции проекта и общие функции.'
+  <div><br/><font color='red'><strong>Баллы за бета-экзамены не выставляются сразу, потому что мы собираем данные о качестве вопросов и экзамена. <a href="/learn/certifications/certification-exams#participating-in-beta-exams">Узнайте больше о ценности и важности бета-версий экзаменов</a>.</strong></font></div>
+subTitle: 'Этот экзамен измеряет вашу способность описывать следующее: Dynamics 365 Marketing; Dynamics 365 Sales; Dynamics 365 Customer Service; Dynamics 365 Field Service; операции проекта и общие функции.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JIev
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-910&examname=Exam%20MB-910:%20Microsoft%20Dynamics%20365%20Fundamentals%20Customer%20Engagement%20Apps%20(CRM)&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-910
 locales:
 - en
 levels:
@@ -33,10 +34,21 @@ roles:
 products: 
 - dynamics-365
 - dynamics-customer-engagement
+courses:
+- uid: course.mb-910t00
+paths:
+- uid: learn.wwl.explore-microsoft-dynamics-365-marketing
+- uid: learn.wwl.explore-microsoft-dynamics-365-sales
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-customer-service
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-field-service
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-project-operations-crm
 relatedCertifications:
 - related:
     uid: certification.d365-fundamentals-customer-engagement-apps-crm
 resources:
+- title: Обучение для получения сертификата
+  description: Рекомендуемые учебные ресурсы, которые помогут вам подготовиться к обязательным экзаменам и получить сертификат.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAs3I
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
